--- a/luvano.css
+++ b/luvano.css
@@ -56,12 +56,23 @@
 
 #logo-section {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+    height: 100%;
+    padding: 30px 0;
 }
 
 #logo-section img {
     width: 300px;
+}
+
+#logo-section h2 {
+    font-size: 15px;
+    position: absolute;
+    top: 55vh;
+    font-style: italic;
+    text-shadow: 1px 1px 5px #0000002c;
 }
 
 #nav-section {
