--- a/luvano.css
+++ b/luvano.css
@@ -48,7 +48,7 @@
     background: linear-gradient( to top, #ffffff00, var(--cinza-claro)), 
     url(img/banner-04.jpg);
 
-    width: 100vw;
+    width: 2000px;
 
     background-repeat: no-repeat;
     background-position: center;
