--- a/luvano.css
+++ b/luvano.css
@@ -68,7 +68,7 @@
 
 #estrutura4 {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     gap: 30px;
     padding: 50px 0;
 }
