--- a/luvano.css
+++ b/luvano.css
@@ -33,8 +33,12 @@
     background-color: var(--laranja);
 }
 
-#background3, #background4, #background5, #background6 {
+#background3, #background4, #background5, #background6, #background7 {
     background-color: white;
+}
+
+#background8 {
+    background-color: black;
 }
 
 /* Estrutura das Sections */
@@ -78,6 +82,11 @@
     display: flex;
     justify-content: center;
     margin: 50px 0;
+}
+
+#estrutura7 {
+    display: flex;
+    justify-content: center;
 }
 
 /* ----- Personalização das Divs ----- */
@@ -246,4 +255,93 @@ strong {
 
 #tit-back6 {
     margin-bottom: 30px;
+}
+
+/* Referente à parte 7 do site, a parte de *Formulário de e-mail*/
+
+#contato {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    box-shadow: 1px 1px 5px #0000009f;
+    border-radius: 20px;
+    background: url(img/lucas-k-GAM-7l4QzmI-unsplash.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+
+}
+
+#aba-redes-sociais {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 50%;
+    height: 100%;
+    border-radius: 20px 0 0 20px;
+    gap: 20px;
+    padding: 20px;
+}
+
+h6 {
+    color: var(--cinza-claro);
+    font-size: 20px;
+}
+
+.listing-fale-conosco {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid transparent;
+    padding: 5px;
+}
+
+.listing-fale-conosco:hover {
+    border-bottom: 2px solid var(--laranja);
+    cursor: pointer;
+}
+
+#aba-formulario {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    padding: 20px;
+}
+
+#form-email {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 60%;
+    gap: 15px;
+}
+
+.campo-form {
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+}
+
+#text {
+    height: 100px;
+}
+
+#btn-envia {
+    padding: 10px;
+    width: 30%;
+    background-color: var(--cinza-claro);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    align-self: center;
+}
+
+#btn-envia:hover {
+    cursor: pointer;
+    background-color: var(--laranja);
 }
