--- a/luvano.css
+++ b/luvano.css
@@ -38,7 +38,7 @@
 }
 
 #background8 {
-    background-color: black;
+    background-color: var(--cinza-escuro);
 }
 
 /* Estrutura das Sections */
@@ -87,6 +87,10 @@
 #estrutura7 {
     display: flex;
     justify-content: center;
+}
+
+#estrutura8 {
+    display: flex;
 }
 
 /* ----- Personalização das Divs ----- */
@@ -355,3 +359,88 @@ h6 {
     cursor: pointer;
     background-color: var(--laranja);
 }
+
+/* Referente à parte 8 do site, a parte do *Rodapé*/
+
+footer {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+#footer-logo-rs {
+    display: flex;
+    flex-direction: column;
+}
+
+#footer-redes-sociais {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    gap: 10px;
+}
+
+#footer-redes-sociais img {
+    width: 45px;
+    border-bottom: 2px solid transparent;
+    padding: 5px;
+}
+
+#footer-redes-sociais img:hover {
+    border-bottom: 2px solid var(--laranja);
+}
+
+#logo-footer {
+    width: 200px;
+}
+
+#footer-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+#a-footer {
+    color: white;
+}
+
+#a-footer:hover {
+    color: var(--laranja);
+}
+
+#footer-iframe {
+    display: flex;
+    flex-direction: column;
+}
+
+#footer-iframe h3 {
+    color: white;
+    border-bottom: 1px solid var(--laranja);
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.registro {
+    background-color: var(--cinza-escuro);
+    display: flex;
+    justify-content: center;
+    font-size: 0.9em;
+    flex-wrap: wrap;
+    align-items: center;
+    color: white;
+  }
+  
+  .bortoac-logo {
+    width: 30px;
+    margin-left: 5px;
+  }
+  
+  .logo-bortoac {
+    display: flex;
+    align-items: center;
+    margin-left: 5px;
+  }
+  
