--- a/luvano.css
+++ b/luvano.css
@@ -172,6 +172,7 @@ nav ul li:hover {
     color: var(--laranja);
     gap: 10px;
     text-transform: uppercase;
+    font-size: 24px;
 }
 
 .logo-titulo { 
