--- a/produtos.css
+++ b/produtos.css
@@ -20,6 +20,14 @@
     background-color: white;
 }
 
+#background4-produtos {
+    background-color: white ;
+}
+
+#background5-produtos {
+    background-color: white;
+}
+
 /* Estrutura das Sections */
 
 /* Estrutura section 1, referente à Linha industrial  */
@@ -71,3 +79,20 @@
     display: flex;
     flex-direction: column;
 }
+
+/* Estrutura section 5, referente aos Projetos especiais  */
+
+#estrutura5-produtos {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    background-color: rgb(238, 238, 238);
+    border: 5px solid grey;
+    border-radius: 20px;
+    margin-top: 30px;
+}
+
+#img-projetos-especiais {
+    width: 250px;
+}
+
