--- a/luvano.css
+++ b/luvano.css
@@ -111,7 +111,7 @@
     padding: 30px 0;
 }
 
-#logo-section img {
+#logo {
     width: 300px;
 }
 
@@ -408,9 +408,6 @@ footer {
     flex-direction: column;
     gap: 20px;
     align-items: center;
-    position: relative;
-    left: 50%;
-    right: 50%;
 }
 
 #a-footer {
